syntax = "proto3";

package user;


option go_package = "grpc-server-1/protogen/user";

message UserRequest { 
  string id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string occupation = 3 [json_name = "occupation"];
  string email = 4 [json_name = "email"];
  string password_hash = 5 [json_name = "password_hash"];
  string avatar_file_name = 6 [json_name = "avatar_file_name"];
  string role = 7 [json_name = "role"];
  string created_at = 8 [json_name = "created_at"];
  string updated_at = 9 [json_name = "updated_at"];
}

message UserResponse { 
  string id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string occupation = 3 [json_name = "occupation"];
  string email = 4 [json_name = "email"];
  string password_hash = 5 [json_name = "password_hash"];
  string avatar_file_name = 6 [json_name = "avatar_file_name"];
  string role = 7 [json_name = "role"];
  string created_at = 8 [json_name = "created_at"];
  string updated_at = 9 [json_name = "updated_at"];
}

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse) {}
}